Particle render without baking issues #59339

Closed
opened 2018-12-13 23:59:04 +01:00 by Martin Ackerl · 18 comments

System Information
Operating system: MacOS 10.14.2
Graphics card: AMD Vega64

Blender Version
Broken: 2.80, 1b6a394d86, blender2.8, 2018-12-03

Error: Particle collisions will be not rendered.

Steps to reproduce:
Created a plane as floor, activated collisions
Created a plane as emitter, activated collisions
Created a Icosphere, used it as particle object

In 3D Viewport everything looks as expected, particles hit floor.
When the exact frame is rendered (no matter Eevee or Cycles) the particles fly through the floor.
See screenshot.

Thank you!

error physics.blend

Bildschirmfoto 2018-12-13 um 23.57.17.png

**System Information** Operating system: MacOS 10.14.2 Graphics card: AMD Vega64 **Blender Version** Broken: 2.80, 1b6a394d862, blender2.8, 2018-12-03 Error: Particle collisions will be not rendered. Steps to reproduce: Created a plane as floor, activated collisions Created a plane as emitter, activated collisions Created a Icosphere, used it as particle object In 3D Viewport everything looks as expected, particles hit floor. When the exact frame is rendered (no matter Eevee or Cycles) the particles fly through the floor. See screenshot. Thank you! [error physics.blend](https://archive.blender.org/developer/F5947168/error_physics.blend) ![Bildschirmfoto 2018-12-13 um 23.57.17.png](https://archive.blender.org/developer/F5947171/Bildschirmfoto_2018-12-13_um_23.57.17.png)

#59953 was marked as duplicate of this issue

#59953 was marked as duplicate of this issue

#60120 was marked as duplicate of this issue

#60120 was marked as duplicate of this issue

#59209 was marked as duplicate of this issue

#59209 was marked as duplicate of this issue

#59568 was marked as duplicate of this issue

#59568 was marked as duplicate of this issue
Author

Added subscriber: @martin.ackerl

Added subscriber: @martin.ackerl

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

If I bake, it works as expected. However it seems like if you just use the automatic playback cache, this issue happens.

@brecht who is in charge of the physics cache stuff?

If I bake, it works as expected. However it seems like if you just use the automatic playback cache, this issue happens. @brecht who is in charge of the physics cache stuff?

Generally you have to bake any physics systems before rendering. However it seems 2.79 was more forgiving in this regard, still failing in some cases but working most of the time.

Generally you have to bake any physics systems before rendering. However it seems 2.79 was more forgiving in this regard, still failing in some cases but working most of the time.

Added subscribers: @ChameleonScales, @JacquesLucke

Added subscribers: @ChameleonScales, @JacquesLucke
Brecht Van Lommel changed title from Collisions are ignored in render to Particle render without baking issues 2018-12-18 15:50:40 +01:00

Added subscribers: @Ontuzhan, @mares-1

Added subscribers: @Ontuzhan, @mares-1

Added subscribers: @HenriqueGonzaga, @StephenSwaney

Added subscribers: @HenriqueGonzaga, @StephenSwaney

Added subscriber: @ixd

Added subscriber: @ixd
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-28 10:16:02 +01:00

This issue was referenced by d2f3378249

This issue was referenced by d2f3378249902cdc093c54c41afb1b48ae8357c3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Re-opening, things are a bit more fragile here, and needs a closer look.

Re-opening, things are a bit more fragile here, and needs a closer look.

This issue was referenced by e925c20f2f

This issue was referenced by e925c20f2facd266c4898d3533d17ed30f159f2a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59339
No description provided.